@@ -1,3 +1,10 @@
+2015-01-09  Thien-Thi Nguyen  <ttn@gnuvola.org>
+
+	[pq slog] Add abstraction: TAKE_STR
+
+	* libpq.c (TAKE_STR): New #define, bifurcated on ‘GI_LEVEL (1, 9)’.
+	(pg_lo_read): Use ‘TAKE_STR’.
+
 2015-01-08  Thien-Thi Nguyen  <ttn@gnuvola.org>
 
 	[pq int] Silence "discards ‘const’ qualifier" warning.
